# tree-sitter-lua_patterns

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lua_patterns.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lua_patterns/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLuaPatterns/: lua_patterns.h
bindings/swift/TreeSitterLuaPatternsTests/: TreeSitterLuaPatternsTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: main.txt
