[package]
name = "tree-sitter-lua-patterns"
description = "Tree-sitter parser for Lua patterns"
version = "0.1.0"
authors = ["MD. Mouinul Hossain <mdmouinulhossainshawon@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lua-patterns"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/oxy2dev/tree-sitter-lua_patterns.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
